<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="mythri.example.com.mythriapplication.SearchActivity"
    >

    <ScrollView
        android:id="@+id/activity_search"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/searchfilter_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:layout_width="371dp"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/streetOrzipcode"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/streetOrzipcode"
                    android:inputType="text"
                    android:maxLines="1"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

            <LinearLayout android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/minrent"
                    android:layout_width="190dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/minrent"
                    android:inputType="text"
                    android:singleLine="true" />

                <EditText
                    android:id="@+id/maxrent"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/maxrent"
                    android:inputType="text"
                    android:singleLine="true" />

            </LinearLayout>

            <LinearLayout android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/fromDate"
                    android:layout_width="190dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/dateformat"
                    android:inputType="text"
                    android:singleLine="true" />

                <EditText
                    android:id="@+id/toDate"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/dateformat"
                    android:inputType="text"
                    android:singleLine="true" />

            </LinearLayout>
            <TextView
                android:id="@+id/textviewscore"
                android:layout_width="match_parent"
                android:layout_height="26dp"
                android:capitalize="characters"
                android:text="@string/score"
                android:textColor="@android:color/black"
                android:textColorHighlight="@android:color/primary_text_dark"
                android:layout_centerVertical="true"
                android:textSize="15dp"/>
            <Spinner
                android:id="@+id/score"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:entries="@array/score_arrays"
                android:prompt="@string/score" />

            <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioButton
                android:text="@string/flatshare"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/radioButtonflatshare"
                android:layout_weight="0.01"/>

                <RadioButton
                    android:id="@+id/radioButtonflat"
                    android:text="@string/flat"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.01"/>
            </RadioGroup>
            <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioButton
                    android:text="@string/studentresidence"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/radioButtonStudentresidence"
                    android:layout_weight="0.77"/>

                <RadioButton
                    android:id="@+id/radioButtonhouse"
                    android:text="@string/house"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.45"/>
            </RadioGroup>


            <RadioGroup
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="1">

                <RadioButton
                    android:text="@string/minwalk2km"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/radioButton2kmwalk"
                    android:layout_weight="1" />

                <RadioButton
                    android:id="@+id/radioButton5kmwalk"
                    android:text="@string/minwalk5km"
                    android:layout_width="155dp"
                    android:layout_height="47dp" />
            </RadioGroup>

            <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="1">

                <RadioButton
                    android:text="@string/minwalkmorethan5km"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/radioButtonmorethan5kmwalk"
                    android:layout_weight="0.28"/>

                <RadioButton
                    android:id="@+id/radioButtondirectbus"
                    android:text="@string/directbus"
                    android:layout_width="111dp"
                    android:layout_height="wrap_content" />
            </RadioGroup>
            <TextView
                android:id="@+id/textviewlandlordratings"
                android:layout_width="match_parent"
                android:layout_height="26dp"
                android:capitalize="characters"
                android:text="@string/landordratings"
                android:textColor="@android:color/black"
                android:textColorHighlight="@android:color/primary_text_dark"
                android:layout_centerVertical="true"
                android:textSize="15dp"/>
            <Spinner
                android:id="@+id/landlordratings"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:entries="@array/landlordratings_arrays"
                />
            <Spinner
                android:id="@+id/sortby"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:entries="@array/sortby_arrays"
                />


            <Button
                android:id="@+id/button_search"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/action_search"
                android:textStyle="bold" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>
